Fix z-index issues in sidebar

--- a/assets/less/sidebar.less
+++ b/assets/less/sidebar.less
@@ -20,6 +20,8 @@
 
   -webkit-transition: all 0.2s;
           transition: all 0.2s;
+
+  z-index: 1;
 }
 
 .sidebar--is-expanded {
